# casm_calibrator

./: .gitignore  README.md  pyproject.toml
docs/: calibration_workflow.md
results/mar10_verification/: svd_weights_mar11_relaxed.npz
results/multi_day_svd/: svd_weights_2026-03-06.npz  svd_weights_2026-03-10.npz
results/position_fit/: position_fit_results.npz
results/verify_vis_beamform/: beam_image_comparison.npz  beam_image_transit_vs_night.npz  verify_vis_beamform_2026-03-10-14:05:53.npz
results/verify_voltage_beamform/: verify_voltage_beamform_2026-02-17-21:10:43.npz
results/voltage_beamform/: coherent_vs_incoherent.npz
scripts/: compare_cal_delays.py  track0_sanity_checks.py  track1_multi_day_svd.py  track2_voltage_beamform.py  track3_convention_check.py  track4_position_verify.py  track5_verify_mar10_weights.py  verify_beam_image_comparison.py  verify_visibility_beamform.py  verify_voltage_beamform.py
src/casm_calibrator/: __init__.py  cli.py  diagnostics.py  fringe_stop.py  output.py  rfi.py  svd.py  visibility.py
tests/: conftest.py  test_output.py  test_rfi.py  test_svd.py  test_visibility.py
