[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casm_calibrator"
version = "0.1.0"
description = "SVD-based beamformer calibration for CASM"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "casm_io",
    "casm_vis_analysis",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
casm-svd-calibrate = "casm_calibrator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
